fix: layout on mobile (fixed navbar)

--- a/packages/website-react/components/Layout.module.scss
+++ b/packages/website-react/components/Layout.module.scss
@@ -54,6 +54,7 @@ $duration: .2s;
 
       overflow: hidden;
       main{
+        overflow-y: auto;
         grid-area: main;
         place-self: stretch;
 
